--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El titulo del post</title>
+    <title>Bienvenidos a hyperblog 2.0</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
             <p>Y este el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>  
             <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un Rockstar pero estadisticamente no lo eres.... por ahora.</p>
         </div>
-    </div>
+    </div>  
     
 </body>
 </html>
